--- a/produto.html
+++ b/produto.html
@@ -12,6 +12,8 @@
     <title>Don Novo</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- MocchaMatari Font -->
+    <link href="//db.onlinewebfonts.com/c/3710eb8fca91ad0613cc0516af488328?family=MochaMattariW01-Regular" rel="stylesheet" type="text/css"/>
     <!-- bootstrap -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap-grid.min.css">
@@ -94,7 +96,7 @@
                             Quasi, cum quas natus iusto iure tempore modi placeat eligendi ipsam nesciunt molestias 
                             eius, odit sequi ad, esse quidem doloremque harum vero incidunt aliquam sint! Odit 
                             sunt tempora necessitatibus minima distinctio deleniti.</p>
-                        <h4 class="price">Valor: <span>$R$ 89,00</span></h4>
+                        <!-- <h4 class="price">Valor: <span></span></h4> -->
                         <!-- <p class="vote"><strong>91%</strong> que compraram, aprovaram o produto</p> -->
                         <div class="action">
                             <button class="add-to-cart btn btn-default" type="button">Chamar no Whatsapp</button>
