--- a/sobre.html
+++ b/sobre.html
@@ -12,6 +12,8 @@
     <title>Don Novo</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- MocchaMatari Font -->
+    <link href="//db.onlinewebfonts.com/c/3710eb8fca91ad0613cc0516af488328?family=MochaMattariW01-Regular" rel="stylesheet" type="text/css"/>
     <!-- bootstrap -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap-grid.min.css">
